2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/Doxyfile.in:
 - Don't generate huge HTML versions of source, thanks Eugene V. Lyubimkin.
2009-07-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/largeobject.hxx:
 - Fixed compile warnings on some 32-bit configurations.
2009-06-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
 - Fixed mistake in tutorial example.  Thanks Patrick Daryll Glandien.
 - Closes #187.
2009-06-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/preprelease:
 - Don't build tarball again.
 - Deal with changed "make check" output.
 - Clean up and rebuild reference documentation.
2009-01-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 libpqxx.spec.in:
  - Depend on postgresql-libs and postgresql-devel, thanks Bob Knock
  - Install x86_64 libs in /usr/lib64, thanks Bob Knock
  - Use %configure, not ./configure, thanks Bob Knock
  - Removed some hard-coding of directories, thanks Bob Knock
 win32/vc-test.mak.template:
  - Got rid of superfluous dot in library name.
  - Got rid of unnecessary quotes, thanks Andrew Maclean.
2009-01-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-test.mak.template:
  - Several fixes, thanks Andrew Maclean.
2009-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
  - Export throw_null_conversion, thanks Andrew Maclean
2008-12-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/Makefile.am:
  - Fixed glitch that broke with Solaris "make," thanks Doug.
 test/test_helpers.hxx:
  - Bounds check failure message now includes value of violated boundary
2008-11-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/extract_version, tools/preprelease, tools/release:
  - Automating part of release process
 VERSION
  - Use 2-level versions for x.0; more stability among 3-level versions
2008-10-31  Eugene V. Lyubimkin <jackyf.devel@gmail.com>
 test/unit/Makefile.am.template:
  - Added includes to fill 'make check' missing includes when building in
    non-stardard build directory.
 debian/rules: