@@ -1,10 +1,17 @@
 2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ autogen.sh:
+ - Get ABI version as well as library version.
  doc/Doxyfile.in:
  - Don't generate huge HTML versions of source, thanks Eugene V. Lyubimkin.
  include/pqxx/result.hxx, include/pqxx/util.hxx src/connection_base.cxx,
  src/util.cxx:
  - Clean up deleter handling in PQAlloc, thanks Kirit Saelensminde.
  - Should fix a case of mismatched allocation/deallocation.
+ include/pqxx/version.hxx.template:
+ - Include ABI version.
+ tools/extract_version:
+ - New --abi option to extract library ABI version.
+ - New --help option.
 2009-07-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/largeobject.hxx:
  - Fixed compile warnings on some 32-bit configurations.
