@@ -1,6 +1,13 @@
 2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ autogen.sh:
+ - Get ABI version as well as library version.
+ include/pqxx/version.hxx.template:
+ - Forgot to add.
  doc/Doxyfile.in:
  - Don't generate huge HTML versions of source, thanks Eugene V. Lyubimkin.
+ tools/extract_version:
+ - New --abi option to extract library ABI version.
+ - New --help option.
 2009-07-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/largeobject.hxx:
  - Fixed compile warnings on some 32-bit configurations.
